--- a/Views/CustomData/Index.cshtml
+++ b/Views/CustomData/Index.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/planets.css">
     <title>Planets</title>
 </head>
@@ -21,8 +22,10 @@
     </div>
 
     <div class="layout">
-        <div>
-            <h1>Click a planet to get more details</h1>
+        <div class="info-section">
+            <h1>The Solar System</h1>
+            <p>Discover the wonders of our cosmic neighborhood.
+                Click on any planet below to learn more about its unique features and place in the solar system.</p>
 
             <!-- Display a list of planets -->
             <ul id="planetList">
